syntax = "proto3";

package protobuf;
option go_package = "api/domain/protobuf;protobuf";

message ServerPacket {
  oneof payload {
    DrawingData drawing_data = 1;
    PlayerJoined player_joined = 2;
    GameStarted game_started = 3;
    RoundUpdate round_update = 4;
    PlayerIsChoosingWord player_is_choosing_word = 5;
    PlayerIsDrawing player_is_drawing = 6;
    TurnSummary turn_summary = 7;
    PlayerGuessedTheWord player_guessed_the_word = 8;
    LeaderBoard leaderboard = 9;
    PlayerMessage player_message = 10;
    PleaseChooseAWord please_choose_a_word = 11;
    InitialRoomSnapshot initial_room_snapshot = 12;
    YourTurnToDraw your_turn_to_draw = 13;
    PlayerLeft player_left = 14;
  }

  int64 server_timestamp = 16;

  message YourTurnToDraw {
    string word = 1;
  }

  message InitialRoomSnapshot {
    message PlayerState {
      string username = 1;
      int64 score = 2;
      bool is_guesser = 3;
    }
    repeated PlayerState players_states = 1;
    repeated bytes drawing_history = 2;
    string current_drawer = 3;
    int32 current_round = 4;
    string room_id = 5;
    int64 next_tick = 6;
    int64 choosing_word_duration = 7;
    int64 drawing_duration = 8;
    int32 current_phase = 9;
  }

  message PlayerJoined {
    string username = 1;
  }

   message PlayerLeft {
    string username = 1;
  }

  message GameStarted {}

  message RoundUpdate {
    int64 round_number = 1;
  }

  message PlayerIsChoosingWord {
    string username = 1;
  }

  message PlayerIsDrawing {
    string username = 1;
  }

  message TurnSummary {
    string word_reveal = 1;
    repeated ScoreDeltas deltas = 2;
    message ScoreDeltas {
      string username = 1;
      int64 score_delta = 2;
    }
  }

  message PlayerGuessedTheWord {
    string username = 1;
  }

  message LeaderBoard {}

  message PlayerMessage {
    string from = 1;
    string message = 2;
  }

  message PleaseChooseAWord {
    repeated string words = 1;
  }
}

message ClientPacket {
  oneof payload {
    DrawingData drawing_data = 1;
    PlayerMessage player_message = 2;
    WordChoice word_choice = 3;
    StartGame start_game = 5;
  }

  message StartGame {}

  message WordChoice {
    int64 choice = 1;
  }

  message PlayerMessage {
    string message = 1;
  }
}

message DrawingData {
  bytes data = 1;
}